Create contact, footer

--- a/index.html
+++ b/index.html
@@ -572,8 +572,172 @@
           </div>
         </div>
       </section>
-      <section id="contact"></section>
+      <section id="contact">
+        <h3>Parliamone!</h3>
+        <p>
+          Hai un'idea per il tuo prossimo progetto web? Vuoi migliorare la tua
+          presenza online o hai domande sui miei servizi? <br />Non esitare a
+          contattarmi. Sarò felice di darti una mano!
+        </p>
+        <form action="">
+          <label for="name">Nome</label><input type="text" id="name" />
+          <label for="email">Email</label><input type="email" id="email" />
+          <label for="message" class="form-label">Il tuo Messaggio</label>
+          <textarea
+            id="message"
+            name="message"
+            class="form-textarea"
+            placeholder="Descrivi il tuo progetto o la tua domanda..."
+            required
+          ></textarea>
+          <button type="submit">Invia</button>
+        </form>
+        <div class="contact-details">
+          <div class="contact-item">
+            <svg
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+              ></path>
+            </svg>
+            <span>Email</span>
+            <a href="mailto:info@tuodominio.it">info@tuodominio.it</a>
+          </div>
+          <div class="contact-item">
+            <svg
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.135l-2.54 1.89a6.5 6.5 0 007.24 7.24l1.89-2.54a1 1 0 011.135-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+              ></path>
+            </svg>
+            <span>Telefono</span>
+            <a href="tel:+39123456789">+39 123 456 789</a>
+          </div>
+          <div class="contact-item">
+            <svg
+              style="color: #25d366"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path
+                d="M12.04 2.00001C6.54003 2.00001 2.04003 6.50001 2.04003 12C2.04003 13.78 2.50003 15.45 3.32003 16.94L2.04003 22L7.38003 20.67C8.82003 21.49 10.39 21.96 12.04 21.96C17.54 21.96 22.04 17.46 22.04 11.96C22.04 6.46001 17.54 2.00001 12.04 2.00001ZM16.48 16.03C16.32 16.33 15.65 16.74 15.11 16.82C14.58 16.91 14.07 16.92 13.56 16.75C13.06 16.57 12.35 16.14 11.66 15.43C10.96 14.73 10.42 13.99 10.25 13.71C10.08 13.43 9.77003 13.02 9.53003 12.59C9.28003 12.16 8.79003 11.53 8.79003 10.98C8.79003 10.43 9.17003 10.22 9.29003 9.97001C9.41003 9.71001 9.49003 9.57001 9.69003 9.16001C9.89003 8.75001 9.80003 8.39001 9.72003 8.24001C9.64003 8.09001 9.00003 7.60001 8.73003 7.41001C8.47003 7.23001 8.21003 7.23001 7.95003 7.23001C7.69003 7.23001 7.27003 7.34001 6.89003 7.73001C6.51003 8.13001 5.30003 9.28001 5.30003 11.56C5.30003 13.84 6.94003 15.91 7.17003 16.23C7.40003 16.54 8.68003 18.52 10.60 19.33C12.52 20.15 12.92 20.02 14.28 19.89C15.65 19.76 16.72 19.1 16.94 18.73C17.16 18.36 17.38 17.07 16.48 16.03Z"
+              />
+            </svg>
+            <span>Whatsapp</span>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="container footer-content">
+        <div class="footer-section footer-info">
+          <div class="footer-logo"></div>
+          <p>&copy; 2025 Aurelio La Rocca. Tutti i diritti riservati.</p>
+        </div>
+
+        <div class="footer-section footer-links-group">
+          <h4>Link Utili</h4>
+          <a href="#home">Home</a>
+          <a href="#servizi">Servizi</a>
+          <a href="#portfolio">Portfolio</a>
+          <a href="#pricing">Pricing</a>
+          <a href="#contatti">Contatti</a>
+        </div>
+
+        <div class="footer-section footer-social">
+          <h4 style="text-align: center">Seguimi</h4>
+          <div class="footer-social-links">
+            <a
+              href="https://facebook.com/tuoprofilo"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M9.198 21.5H13.802V15.701H16.059L16.414 13.298H13.802V11.536C13.802 10.835 13.993 10.354 14.887 10.354H16.518V7.915C16.216 7.886 15.006 7.781 13.722 7.781C11.082 7.781 9.387 9.479 9.387 11.95V13.298H7.558V15.701H9.387V21.5ZM12 2C6.478 2 2 6.478 2 12C2 17.522 6.478 22 12 22C17.522 22 22 17.522 22 12C22 6.478 17.522 2 12 2Z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://instagram.com/tuoprofilo"
+              target="_blank"
+              aria-label="Instagram"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 2C9.5294 2 6.4706 2 6.4706 2C3.89675 2 2 3.89675 2 6.4706C2 9.5294 2 12 2 12C2 14.57325 3.89675 16.4706 6.4706 16.4706C9.5294 16.4706 12 16.4706 12 16.4706C14.57325 16.4706 16.4706 14.57325 16.4706 12C16.4706 9.5294 16.4706 6.4706 16.4706 6.4706C16.4706 3.89675 14.57325 2 12 2ZM12 4.41176C12 4.41176 12 4.41176 12 4.41176C14.832 4.41176 17.1765 6.75626 17.1765 9.58824C17.1765 12.4202 14.832 14.7647 12 14.7647C9.168 14.7647 6.8235 12.4202 6.8235 9.58824C6.8235 6.75626 9.168 4.41176 12 4.41176Z"
+                />
+                <path
+                  d="M12 7.76471C10.0387 7.76471 8.41176 9.39165 8.41176 11.3529C8.41176 13.3142 10.0387 14.9412 12 14.9412C13.9613 14.9412 15.5882 13.3142 15.5882 11.3529C15.5882 9.39165 13.9613 7.76471 12 7.76471ZM18.7059 3.29412C18.7059 2.58047 18.1274 2 17.4137 2C16.7001 2 16.1216 2.58047 16.1216 3.29412C16.1216 4.00776 16.7001 4.58824 17.4137 4.58824C18.1274 4.58824 18.7059 4.00776 18.7059 3.29412Z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://linkedin.com/in/tuoprofilo"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M20.447 20.452H15.06V14.708C15.06 13.312 14.965 12.355 13.738 12.355C12.345 12.355 12.091 13.393 12.091 14.708V20.452H6.704V8.529H12.091V10.825C12.091 10.825 12.593 9.94 14.283 9.94C16.096 9.94 17.375 10.963 17.375 13.064V20.452H20.447ZM3.626 6.84C2.518 6.84 1.637 5.959 1.637 4.851C1.637 3.743 2.518 2.862 3.626 2.862C4.734 2.862 5.615 3.743 5.615 4.851C5.615 5.959 4.734 6.84 3.626 6.84ZM6.704 20.452H1.637V8.529H6.704V20.452Z"
+                />
+              </svg>
+            </a>
+            <a
+              href="https://github.com/tuoprofilo"
+              target="_blank"
+              aria-label="GitHub"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M12 0C5.372 0 0 5.372 0 12C0 17.339 3.438 21.84 8.204 23.385C8.804 23.495 9.02 23.11 9.02 22.766V20.932C5.975 21.615 5.312 19.554 5.312 19.554C4.814 18.291 4.14 17.971 4.14 17.971C3.197 17.327 4.217 17.34 4.217 17.34C5.268 17.414 5.795 18.375 5.795 18.375C6.737 20.007 8.214 19.516 8.804 19.227C8.904 18.524 9.176 18.04 9.479 17.778C7.031 17.502 4.546 16.577 4.546 12.355C4.546 11.233 4.931 10.323 5.565 9.605C5.467 9.362 5.146 8.353 5.666 7.021C5.666 7.021 6.484 6.75 9.006 8.527C9.799 8.307 10.643 8.196 11.488 8.196C12.333 8.196 13.178 8.307 13.971 8.527C16.493 6.75 17.311 7.021 17.311 7.021C17.831 8.353 17.51 9.362 17.412 9.605C18.046 10.323 18.431 11.233 18.431 12.355C18.431 16.589 15.942 17.502 13.497 17.778C13.844 18.077 14.159 18.665 14.159 19.554V22.766C14.159 23.116 14.372 23.495 14.978 23.385C19.748 21.832 23.187 17.336 23.187 12C23.187 5.372 17.815 0 11.188 0H12Z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+      <p class="footer-tagline">
+        Il tuo successo online è la mia priorità. Contattami per un preventivo
+        gratuito!
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
