--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>ALR.dev</title>
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="DEVELOPMENT-removebg-preview.png"
-    />
+    <title>ALR Development</title>
+    <link rel="icon" type="image/svg+xml" href="DEVELOPMENTbk.svg.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -608,7 +604,7 @@
               ></path>
             </svg>
             <span>Email</span>
-            <a href="mailto:info@tuodominio.it">info@tuodominio.it</a>
+            <a href="mailto:info@tuodominio.it">laroccaaurelio1@gmail.com</a>
           </div>
           <div class="contact-item">
             <svg
@@ -625,7 +621,7 @@
               ></path>
             </svg>
             <span>Telefono</span>
-            <a href="tel:+39123456789">+39 123 456 789</a>
+            <a href="tel:+39123456789">+39 3455673594</a>
           </div>
           <div class="contact-item">
             <svg
