--- a/index.html
+++ b/index.html
@@ -14,21 +14,14 @@
     />
   </head>
   <body>
-    <div id="video-container">
-      <video id="intro-video" autoplay muted>
-        <source src="By-Aurelio-La-Rocca.mp4" type="video/mp4" />
-        Il tuo browser non supporta il video.
-      </video>
-    </div>
-
     <nav class="main-content">
       <img src="DEVELOPMENTbk.svg.svg" alt="" />
-      <p>Home</p>
-      <p>Skills</p>
-      <p>Service</p>
-      <p>Projects</p>
-      <p>Pricing</p>
-      <p>Contact</p>
+      <p class="changer">Home</p>
+      <p class="changer">Skills</p>
+      <p class="changer">Service</p>
+      <p class="changer">Projects</p>
+      <p class="changer">Pricing</p>
+      <p class="changer">Contact</p>
       <div class="light">
         <div class="btnLight">
           <img id="btnImage" src="moon-icon-0.png" alt="" />
@@ -50,8 +43,8 @@
         <button>Richiedi un preventivo</button>
       </header>
       <section id="Skills">
-        <h3>Skills</h3>
-        <h4>Siti personalizzati con</h4>
+        <h3 class="changer">Skills</h3>
+        <h4 class="changer">Siti personalizzati con</h4>
         <div class="container-linguaggi">
           <img src="./Img Linguaggi/Html.png" alt="" />
           <img src="./Img Linguaggi/css3-logo-svg-vector.svg" alt="" />
@@ -69,7 +62,7 @@
         <button>Scopri di piu'</button>
       </section>
       <section id="Service">
-        <h3>Service</h3>
+        <h3 class="changer">Service</h3>
         <div class="container-cards">
           <div class="service-card">
             <h4>Web Development</h4>
@@ -100,7 +93,7 @@
         </div>
       </section>
       <section id="project">
-        <h3>Projects</h3>
+        <h3 class="changer">Projects</h3>
         <ul>
           <li id="web-projects-link">Siti Web</li>
           <li id="games-projects-link">Giochi</li>
@@ -184,11 +177,11 @@
           </button>
           <div class="dots-container"></div>
         </div>
-        <p>Scopri tutti i miei progetti</p>
+        <p class="changer">Scopri tutti i miei progetti</p>
       </section>
       <div id="banner"></div>
       <section id="pricing">
-        <h3>Pricing</h3>
+        <h3 class="changer">Pricing</h3>
         <div class="pricing-grid">
           <!-- Card 1: Landing Page -->
           <div class="pricing-card">
@@ -573,8 +566,8 @@
         </div>
       </section>
       <section id="contact">
-        <h3>Parliamone!</h3>
-        <p>
+        <h3 class="changer">Parliamone!</h3>
+        <p class="changer">
           Hai un'idea per il tuo prossimo progetto web? Vuoi migliorare la tua
           presenza online o hai domande sui miei servizi? <br />Non esitare a
           contattarmi. Sarò felice di darti una mano!
@@ -607,7 +600,7 @@
                 d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
               ></path>
             </svg>
-            <span>Email</span>
+            <span class="changer">Email</span>
             <a href="mailto:info@tuodominio.it">laroccaaurelio1@gmail.com</a>
           </div>
           <div class="contact-item">
@@ -624,7 +617,7 @@
                 d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.135l-2.54 1.89a6.5 6.5 0 007.24 7.24l1.89-2.54a1 1 0 011.135-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
               ></path>
             </svg>
-            <span>Telefono</span>
+            <span class="changer">Telefono</span>
             <a href="tel:+39123456789">+39 3455673594</a>
           </div>
           <div class="contact-item">
@@ -642,7 +635,7 @@
                 d="M12.04 2.00001C6.54003 2.00001 2.04003 6.50001 2.04003 12C2.04003 13.78 2.50003 15.45 3.32003 16.94L2.04003 22L7.38003 20.67C8.82003 21.49 10.39 21.96 12.04 21.96C17.54 21.96 22.04 17.46 22.04 11.96C22.04 6.46001 17.54 2.00001 12.04 2.00001ZM16.48 16.03C16.32 16.33 15.65 16.74 15.11 16.82C14.58 16.91 14.07 16.92 13.56 16.75C13.06 16.57 12.35 16.14 11.66 15.43C10.96 14.73 10.42 13.99 10.25 13.71C10.08 13.43 9.77003 13.02 9.53003 12.59C9.28003 12.16 8.79003 11.53 8.79003 10.98C8.79003 10.43 9.17003 10.22 9.29003 9.97001C9.41003 9.71001 9.49003 9.57001 9.69003 9.16001C9.89003 8.75001 9.80003 8.39001 9.72003 8.24001C9.64003 8.09001 9.00003 7.60001 8.73003 7.41001C8.47003 7.23001 8.21003 7.23001 7.95003 7.23001C7.69003 7.23001 7.27003 7.34001 6.89003 7.73001C6.51003 8.13001 5.30003 9.28001 5.30003 11.56C5.30003 13.84 6.94003 15.91 7.17003 16.23C7.40003 16.54 8.68003 18.52 10.60 19.33C12.52 20.15 12.92 20.02 14.28 19.89C15.65 19.76 16.72 19.1 16.94 18.73C17.16 18.36 17.38 17.07 16.48 16.03Z"
               />
             </svg>
-            <span>Whatsapp</span>
+            <span class="changer">Whatsapp</span>
           </div>
         </div>
       </section>
